--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <li>2 slices of bread</li>
     <li>4 slices of cheese
       <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>cheddar</li>
+        <li>mozzarella</li>
+        <li>pepper jack</li>
       </ol>
     </li>
     <li>1 tbsp of butter</li>
