--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     <li>1 tbsp of butter</li>
   </ul>
 
+  <ol>
+    <li>Spread butter on bread and frying pan</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
+
 </body>
 </html>
